# debinstaller

./: CMakeLists.txt
debian/: control
qml/: AppPage.qml  HomePage.qml.bak2  InstallPage.qml  main.qml
src/: debinstaller.cpp  debinstaller.h
